# hades-crap

./: .gitignore  .gitmodules  GeomFunct.h  Includes.h  LICENSE  Makefile  MomentumResolution.cc  PID_Cuts_gosia.h  README.md  TestAnalysis.cc  analysis  analysis.cc  baseAnalysis.cc  dLambda_SIM_momRes.cc  drawProton3DCFcopy.cc  femtoAnalysis.cc  loopRootSourceReconstructor.C  newFemtoAnalysis.cc  newMomentumResolutionAnalysis.cc  newPurityAnalysis.cc  newQaAnalysis.cc  newQaAnalysis_cc_ACLiC_dict.cxx_tmp_3825788  sendScript_SL.sh  testAnalysis.cc  testMetaMatcher.cc  tmp.out
FemtoMerger/: CMakeCache.txt  CMakeLists.txt  HelperFunctions.hxx  Makefile  cmake_install.cmake  femtoMerge  femtoMerge.cc  femtoMerge.cxx
FemtoMixer/: Doxyfile  EventCandidate.hxx  EventUtils.hxx  FemtoMerger.hxx  FemtoMixer.hxx  JJFemtoMixer.hxx  JJMultiEventMixer.hxx  JJUtils.hxx  MdcWires.hxx  Options.hxx  PairCandidate.hxx  PairUtils.hxx  Target.hxx  TrackCandidate.hxx  TrackSmearer.hxx
QaTtreeAnalysis/: Makefile  TreeAnalysis  TreeAnalysis.cc  TreeMacro.h  markBadRuns.cc
lists/: day_095.list  day_096.list  day_097.list  day_098.list  day_099.list  day_100.list  day_101.list  day_102.list  day_103.list  day_104.list  day_105.list  day_106.list  day_107.list  day_108.list  day_109.list  day_110.list  day_111.list  day_112.list  day_113.list  day_114.list  day_115.list  day_116.list  day_117.list  day_118.list  day_119.list  day_120.list  day_121.list  day_122.list  day_123.list  day_124.list  day_125.list  day_126.list  sim_50.list
listsFeb24/: day_039.list  day_061.list  day_062.list  (+2 more)
(+328 files in other folders)
